@@ -2,6 +2,7 @@ package edu.colorado.phet.movingmanii;
 
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationConfig;
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationLauncher;
+import edu.colorado.phet.common.phetcommon.model.Resettable;
 import edu.colorado.phet.common.piccolophet.PiccoloPhetApplication;
 import edu.colorado.phet.movingmanii.model.MovingManModel;
 import edu.colorado.phet.movingmanii.model.MovingManState;
@@ -34,7 +35,11 @@ public class MovingManApplication extends PiccoloPhetApplication {
         }
 
         protected JComponent createSimulationPanel(MovingManModel model, RecordAndPlaybackModel<MovingManState> recordAndPlaybackModel) {
-            return new MovingManSimulationPanelWithPlayAreaSliders(model, recordAndPlaybackModel);
+            return new MovingManSimulationPanelWithPlayAreaSliders(model, recordAndPlaybackModel, new Resettable() {
+                public void reset() {
+                    resetAll();
+                }
+            });
         }
     }
 
