@@ -1,3 +1,4 @@
+Added a reset all button
 # 0.00.02 (41563) Jun 11, 2010
 Fixed: position slider does not play back values
 Added a workaround to prevent high frequency oscillation of derivatives around +/- 1E-12
